tests/baselines/reference/useUnknownInCatchVariables03(strict=false,useunknownincatchvariables=true).errors.txt
tests/cases/compiler/useUnknownInCatchVariables03.ts(2,10): error TS2339: Property 'name' does not exist on type '{}'.
tests/cases/compiler/useUnknownInCatchVariables03.ts(5,10): error TS2339: Property 'name' does not exist on type '{}'.
tests/cases/compiler/useUnknownInCatchVariables03.ts(8,10): error TS2339: Property 'a' does not exist on type '{}'.
tests/cases/compiler/useUnknownInCatchVariables03.ts(11,10): error TS2339: Property 'a' does not exist on type '{}'.
tests/cases/compiler/useUnknownInCatchVariables03.ts(14,8): error TS2461: Type 'unknown' is not an array type.
tests/cases/compiler/useUnknownInCatchVariables03.ts(17,8): error TS2461: Type 'unknown' is not an array type.


==== tests/cases/compiler/useUnknownInCatchVariables03.ts (6 errors) ====
    try {}
    catch ({ name }: unknown) { name; }
             ~~~~
!!! error TS2339: Property 'name' does not exist on type '{}'.
    
    try {}
    catch ({ name }: unknown) {}
             ~~~~
!!! error TS2339: Property 'name' does not exist on type '{}'.
    
    try {}
    catch ({ a: { b } }: unknown) { b; }
             ~
!!! error TS2339: Property 'a' does not exist on type '{}'.
    
    try {}
    catch ({ a: { b } }: unknown) {}
             ~
!!! error TS2339: Property 'a' does not exist on type '{}'.
    
    try {}
    catch ([a, { b }]: unknown) { a; }
           ~~~~~~~~~~
!!! error TS2461: Type 'unknown' is not an array type.
    
    try {}
    catch ([a, { b }]: unknown) {}
           ~~~~~~~~~~
!!! error TS2461: Type 'unknown' is not an array type.
    